# UnlimitedLife-Linux

./: .gitignore  CMakeLists.txt  DearMacros  Dependencies.txt  Doxyfile  PKGBUILD  README.md  SUMMARY  TODO.md  UnlimitedLife-Linux.kdev4  VersionCode.txt  build  build.cmd  buildPkg  build_win_msys2.sh  compress  configure  configure.bat  configure.cmd  configureVCPKG.cmd  configure_win_msys2.sh  dev  run  test_platforms
.github/workflows/: c-cpp.yml  doxygen.yml
.kdev4/: UnlimitedLife-Linux.kdev4
AGE/: AGE.cbp  AGE.cscope_file_list  AGE.depend  AGE.layout  Application.cpp  CMakeLists.txt  ResourceManager.cpp  Window.cpp
AGE/age_test/agetest/: agetest.cbp  agetest.depend  agetest.layout  main.cpp
AGE/age_test/agetest-src/: app.h  app_comp.h  app_draw.cpp  app_run.cpp  app_setup.cpp  app_upload_data.cpp  config.h  imgui.cpp  imgui.h  imgui_impl.cpp  main.cpp  states.h
AGE/age_test/simp-src/: main.cpp
AGE/src/: Application.cpp  Audio.cpp  Base.cpp  BasicGraphics.cpp  Color.cpp  EntityManager.cpp  Framebuffer.cpp  Input.cpp  Model.cpp  ResourceManager.cpp  Shader.cpp  Systems.cpp  Window.cpp  stbi_src.cpp
AGE/src/Audio/: SoundEngine.cpp
AGE/src/Details/: FramebufferManager.cpp  SamplerManager.cpp  ShaderManager.cpp  TextureManager.cpp  WindowManager.cpp
AGE/src/ModelLoader/: Loader.cpp  PrefabGenerator.cpp
CBuild/: ULCore  UnlimitedLife  age_simptest  agetest  agetest_debug  alib4test  alibtest0  alibtest0_debug  imgui.ini  simp-biliplayer
CBuild/Windows/: imgui.ini
CBuild/Windows/test_data/: cube.frag  (+1 more)
CBuild/test_data/: agetest_log.txt  avacado2.mtl  cube.frag  cube.vert  file_size  imgui.ini  logger_newVer  logger_output  logger_output_single  main-bin.stl  shadow.vert  shadow_cl.frag  shadow_cl.vert  template_logger_output  template_logger_output - 0  template_logger_output - 4  template_logger_output - 5  template_logger_output - 6  template_logger_output - 7  template_logger_output - 9  test_music.flac  write_all
CBuild_CACHE/: CMakeCache.txt  Makefile  cmake_install.cmake
CBuild_CACHE/AGE/: Makefile  cmake_install.cmake
CBuild_CACHE/UnlimitedLife-src/: Makefile  cmake_install.cmake
CBuild_CACHE/aaaa0ggmcLib/: Makefile  cmake_install.cmake
CBuild_CACHE/aaaa0ggmcLib-g4/: Makefile  cmake_install.cmake
CBuild_CACHE_WIN/: CMakeCache.txt
CDep/headers/: im_config.h  toml.hpp
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CTest-AGE/: build  build_win  ecs_perf.cpp  ecs_test.cpp  planet.cpp  point.cpp  triangle.cpp
CWS/: AGE.workspace  AGE.workspace.layout  UnlimitedLife.workspace  UnlimitedLife.workspace.layout  alib.workspace  alib.workspace.layout
GTest/: main.cpp  test_aconf.cpp
Lessons/: README.md  never-cache-ptr-for-vectors.md
Lessons/Examples/: refl_cpp.cpp
MineForge/: CMakeLists.txt  MineForge.cbp
ULCore/: CMakeLists.txt
ULCore/src/: main.cpp  terrain.cpp
ULDoc/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_020e6d6265854c1f237da4705858c163.html  dir_020e6d6265854c1f237da4705858c163.js  dir_13833d2d0d5565a708b3c56a7c04a425.html  dir_1583cf041440a907a70d5ce84f76d82f.html  dir_1583cf041440a907a70d5ce84f76d82f.js  dir_1663a57f7ed6144a84d7f95af1fbc447.html  dir_32e4ee9c1f016ba615bda7b03861a60c.html  dir_32e4ee9c1f016ba615bda7b03861a60c.js  dir_380ccb096909a8c9bb60a7591c6a18b1.html  dir_3c714dfdbfb0efeab0b7f09549eaae90.html  dir_3e32797945eaf0afcef96ce7229a55dd.html  dir_3e32797945eaf0afcef96ce7229a55dd.js  dir_411adc9617e4f3740cb04d4e90b64fc7.html  dir_414fd41e5c5d231839fa5fbb45c54f18.html  dir_414fd41e5c5d231839fa5fbb45c54f18.js  dir_4182a48e40a27df9db365da7e5f58987.html  dir_428738b3c546d2ef30ccc0168024beb0.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_542f2bf7d1eeb8b411da15ead18bec44.html  dir_6f1a407f2daaae8b32d458049181b235.html  dir_7030fc2b74b3056a30d4efd8de14fa14.html  dir_7030fc2b74b3056a30d4efd8de14fa14.js  dir_71fb067c891e76648c5124e955898970.html  dir_7af9b032d80012b0228e7b144fdb5b33.html  dir_7af9b032d80012b0228e7b144fdb5b33.js  dir_7c5c00878bc4eeb371b11dfa0bf73723.html  dir_7c5c00878bc4eeb371b11dfa0bf73723.js  dir_7d7892dfffa3a04128137cc55e03799e.html  dir_81ecf38499a5dc1e63efb477ee993080.html  dir_8e59828014dddb433899c7cec06192e5.html  dir_93f76f01882dda88054787e2780b190d.html  dir_93f76f01882dda88054787e2780b190d.js  dir_94503a54fccf6c53669b04f184f71ee4.html  dir_94503a54fccf6c53669b04f184f71ee4.js  dir_98099a0e39b1d959f6cf7c45566c1e22.html  (+96 more)
ULDoc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_1d.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+99 more)
UnlimitedLife/: UnlimitedLife.cbp
UnlimitedLife-src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
aaaa0ggmcLib/: CMakeLists.txt  aaaa0ggmcLib.cbp  aaaa0ggmcLib.depend  aaaa0ggmcLib.layout
aaaa0ggmcLib-g4/: CMakeLists.txt  Makefile  cmake_install.cmake
aaaa0ggmcLib-g4/alib4_test/test-src/: main.cpp
aaaa0ggmcLib-g4/src/: ahandle.cpp  autil.cpp
aaaa0ggmcLib/alib_test/alibtest0/: alibtest0.cbp  alibtest0.depend  alibtest0.layout  main.cpp
aaaa0ggmcLib/alib_test/alibtest0-src/: main.cpp
aaaa0ggmcLib/alib_test/simp-biliplayer/: main.cpp  simp-biliplayer.cbp  simp-biliplayer.depend  simp-biliplayer.layout
aaaa0ggmcLib/alib_test/simp-biliplayer-src/: main.cpp
aaaa0ggmcLib/src/: aclock.cpp  aconf.cpp  adata.cpp  adata_old.cpp  alogger.cpp  alogger_old.cpp  aparser.cpp  astring.cpp  atranslator.cpp  atranslator_old.cpp  autil.cpp
aaaa0ggmcLib/src/backup/: aclock.cpp  adata.cpp  alogger.cpp  aparser.cpp  astring.cpp  atranslator.cpp  autil.cpp
scripts/: README.md  build  buildPkg  build_win_msys2.sh  compress  configure  configure_win_msys2.sh  dev  post_msys.sh  pre-commit  run
scripts/imgui/: CMakeLists.txt
(+780 files in other folders)
