aux_source_directory("./miniaudio-src" MINIAUDIO_SRC)
add_library(miniaudio STATIC ${MINIAUDIO_SRC})
# 这里指定了miniaudio的优化，是因为-O2优化在我电脑上会使得miniaudio崩溃
target_compile_options(miniaudio PUBLIC "-O1")

aux_source_directory("./src" AGE-SRC)
aux_source_directory("./src/ModelLoader" MODEL)
aux_source_directory("./src/Audio" AUDIO)
aux_source_directory("./src/Details" DETAIL)
add_library(AGE SHARED ${AUDIO} ${AGE-SRC} ${DETAIL} ${MODEL})
set_target_properties(AGE PROPERTIES LINKER_LANGUAGE CXX)
# target_compile_options(AGE PUBLIC "-Winline") # 查看内联函数
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	target_compile_options(AGE PRIVATE "-g" "-O0")
	target_compile_definitions(AGE PRIVATE AGE_TRACE_SKIP_CPP_NATIVE AGE_TRACE_COMPACT AGE_ML_DEBUG AGE_LIGHT_BUZZ)
else()
	target_compile_options(AGE PRIVATE "-g" "-O3")
endif()
target_compile_definitions(AGE PRIVATE AGE_BUILD_DLL)
if(WIN32)	
	target_link_libraries(AGE PRIVATE stdc++exp miniaudio dbghelp Shcore aaaa0ggmcLib glu32 glfw3.dll glew32.dll opengl32 gdi32 user32 kernel32)
	target_compile_definitions(AGE PRIVATE GLFW_DLL)
else()
	target_link_libraries(AGE PRIVATE stdc++exp miniaudio dl GLU OpenGL GLEW glfw aaaa0ggmcLib)
endif()
target_compile_definitions(AGE PUBLIC AGE_BUILD_DLL)

aux_source_directory("./age_test/agetest-src/" AGETEST_SRC)
add_executable(agetest ${AGETEST_SRC})
#target_compile_options(agetest PUBLIC "-O3")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
target_compile_definitions(agetest PRIVATE AGE_TRACE_COMPACT AGE_EM_DEBUG AGE_LIGHT_BUZZ)
target_compile_options(agetest PRIVATE "-g" "-O0")
else()
target_compile_options(agetest PRIVATE "-g" "-O3")
endif()
if(WIN32)
target_link_libraries(agetest PRIVATE imgui AGE glfw3.dll glew32.dll opengl32 aaaa0ggmcLib)
target_compile_definitions(agetest PRIVATE GLFW_DLL)
else()
# 直接链接
target_link_libraries(agetest PRIVATE imgui AGE aaaa0ggmcLib glfw GLEW OpenGL) 
endif()

aux_source_directory("./age_test/simp-src/" SIMPTEST_SRC)
add_executable(age_simptest ${SIMPTEST_SRC})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
target_compile_definitions(age_simptest PRIVATE AGE_TRACE_COMPACT AGE_EM_DEBUG AGE_LIGHT_BUZZ)
target_compile_options(age_simptest PRIVATE "-g" "-O0")
else()
target_compile_options(age_simptest PRIVATE "-g" "-O3")
endif()
if(WIN32)
target_link_libraries(age_simptest PRIVATE imgui AGE glfw3.dll glew32.dll opengl32 aaaa0ggmcLib)
target_compile_definitions(age_simptest PRIVATE GLFW_DLL)
else()
# 直接链接
target_link_libraries(age_simptest PRIVATE imgui AGE aaaa0ggmcLib glfw GLEW OpenGL) 
endif()


