aux_source_directory("./" UL_SRC)
add_executable(UnlimitedLife ${UL_SRC})
set_target_properties(UnlimitedLife PROPERTIES LINKER_LANGUAGE CXX)
target_compile_definitions(UnlimitedLife PRIVATE AGE_EM_DEBUG)
if(WIN32)
target_link_libraries(UnlimitedLife PRIVATE glfw3.dll glew32.dll opengl32 AGE aaaa0ggmcLib)
target_compile_definitions(UnlimitedLife PRIVATE GLFW_DLL)
else()
target_link_libraries(UnlimitedLife PRIVATE AGE aaaa0ggmcLib glfw GLEW OpenGL)
endif()
