aux_source_directory("./src" ALIB4-SRC)
add_library(aaaa0ggmcLib-g4 SHARED ${ALIB4-SRC})
set_target_properties(aaaa0ggmcLib-g4 PROPERTIES LINKER_LANGUAGE CXX)
target_compile_definitions(aaaa0ggmcLib-g4 PUBLIC ALIB4_BUILD_DLL)

aux_source_directory("./alib4_test/test-src" TEST-SRC)
add_executable(alib4test ${TEST-SRC})
target_link_libraries(alib4test PRIVATE aaaa0ggmcLib-g4)
if(WIN32)
target_link_options(alib4test PUBLIC "-Wl,--rpath,./")
else()
target_link_options(alib4test PUBLIC "-Wl,--rpath,./ -static -static-libgcc -static-libstdc++")
endif()
